pastebin(stability communication)